--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.4",
     "puppeteer": "^19.7.5",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "xmldom": "^0.6.0",
